<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".StepHeartRateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarParentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/sf_pro_text_bold"
                android:gravity="bottom"
                android:text="@string/hearth_rate"
                android:textSize="25sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnNextStep"
        android:layout_below="@id/appbarParentTop"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_medium"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvSatuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_pro_text_light"
            android:gravity="center"
            android:text="@string/satuan"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btnStart"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/start"
                android:textAllCaps="false" />

            <io.netopen.hotbitmapgg.library.view.RingProgressBar
                android:id="@+id/progress_bar_2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:max="100"
                app:ringColor="@android:color/darker_gray"
                app:ringProgressColor="@color/colorPrimary"
                app:ringWidth="20dp"
                app:style="STROKE"
                app:textColor="@color/colorPrimary"
                app:textIsShow="true"
                app:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnNextStep"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:fontFamily="@font/sf_pro_text_bold"
        android:textColor="@color/colorGrey1"
        android:textAllCaps="false" />

</RelativeLayout>