<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepBloodPresureActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarParentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/sf_pro_text_bold"
                android:text="@string/blood_presure_dan_heart_beat"
                android:textSize="25sp" />

            <Button
                android:visibility="gone"
                android:id="@+id/btnConBlood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:text="@string/connect" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnNextStepBlood"
        android:layout_below="@id/appbarParentTop"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearBlood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:gravity="center"
                    android:text="@string/blood_presure"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvResultBlood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:gravity="center"
                    android:text="@string/result"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvSatuanBlood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sf_pro_text_light"
                    android:gravity="center"
                    android:text="@string/satuan"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearHeart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:gravity="center"
                    android:text="@string/hearth_rate"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvResultHeart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:gravity="center"
                    android:text="@string/result"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvSatuanHeart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sf_pro_text_light"
                    android:gravity="center"
                    android:text="@string/satuan"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btnStartBlood"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_bold"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/start"
                android:textAllCaps="false" />

            <io.netopen.hotbitmapgg.library.view.RingProgressBar
                android:id="@+id/progress_bar_blood"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:max="100"
                app:ringColor="@android:color/darker_gray"
                app:ringProgressColor="@color/colorPrimary"
                app:ringWidth="20dp"
                app:style="STROKE"
                app:textColor="@color/colorPrimary"
                app:textIsShow="true"
                app:textSize="35sp" />

        </RelativeLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnNextStepBlood"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/next"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/colorGrey1" />

</RelativeLayout>