<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarParentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:weightSum="3"
                    android:id="@+id/linearTopParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:contentDescription="@string/profile_patient"
                        android:src="@drawable/ic_account_circle_black_24dp"
                        android:tint="@color/colorWhite" />

                    <LinearLayout
                        android:layout_weight="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvGreetings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sf_pro_text_light"
                            android:text="@string/greetings_morning"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvPaName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sf_pro_text_semibold"
                            android:text="George"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnSettingsBluetooth"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="10dp"
                        android:src="@drawable/ic_settings_black_24dp"
                        android:tint="@color/colorWhite" />

                </LinearLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:textColor="@color/colorWhite"
                    android:text="@string/history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbarParentTop"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="10"
            tools:listitem="@layout/recycler_view_item_1">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckNow"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/check_now"
        android:textAllCaps="false"
        app:cornerRadius="50dp" />

</RelativeLayout>